# CICD

./: CMakeLists.txt  README.md
.github/workflows/: cross_platform_deploy.yml  cross_platform_deploy.yml.in
examples/: CMakeLists.txt
notes/: RELEASE-1.0.0.txt
src/: .gitignore  CICDConfig.cmake.in  CICDMacros.cmake  CMakeLists.txt
src/templates/: cicd_pipeline.yml.in
